package com.asleepyfish.create.builder;

/**
 * @author: zhoujh
 * @date: 2021/12/6 17:08
 * @description:
 */
class Director {
    private Builder builder;
    public Director(Builder builder) {
        this.builder = builder;
    }
    //产品构建与组装方法
    public Product construct() {
        builder.buildPartA();
        builder.buildPartB();
        builder.buildPartC();
        return builder.getResult();
    }
}
